--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href = "https://minecraft-bloxd-schem-convert.vercel.app/dist/index.html"
+  window.location.href = "https://quentin-x.github.io/M2B/dist/"
 </script>
